# news_project

./: README.md  pyproject.toml
data/: model.py
