[tool.poetry]
name = "news-project"
version = "0.1.0"
description = ""
authors = ["Iran <benitezc.iran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
ruff = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
